删除部分内容
删除部分内容

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>欧龙兴(Trojan-X)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>Hey，我是<strong>欧龙兴(Trojan-X)</strong>，一只程序猿，现在深圳工作。</p>
 
     <p>工作、学习之余，喜欢跑酷等极限运动。</p>
 
